--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:title" content="kayac-html5-starter">
     <meta property="twitter:description" content="kayac-html5-starter web page.">
     <!-- stylesheet-->
-    <link rel="stylesheet" href="/css/style.css?v=1">
+    <link rel="stylesheet" href="./css/style.css?v=1">
   </head>
   <body>
     <div class="wrapper">
@@ -46,6 +46,6 @@
       firebase.initializeApp(config);
       
     </script>
-    <script src="/js/script.js?v=1"></script>
+    <script src="./js/script.js?v=1"></script>
   </body>
 </html>
